--- a/myCollegeProfileBuilderA/Info.plist
+++ b/myCollegeProfileBuilderA/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow usage of your library? </string>
 </dict>
 </plist>
